feat: finished form for adding destination - connected to database - add file upload to firebase storage
Co-authored-by: ChristianFredrik69 <ChristianFredrik69@users.noreply.github.com>

--- a/src/style/addDestinationPopUp.css
+++ b/src/style/addDestinationPopUp.css
@@ -1,11 +1,13 @@
 .createButton {
-    /*
+  /*
     We make the button be at a fixed position in the top right corner of the page.
     10 pixels from the top and 10 pixels from the right.
     */
-   
-  }
-  
-.modal-popup {
-    width: 80%;
 }
+
+.modal-design.modal-design {
+  width: 80vw;
+  max-width: none !important;
+}
+
+
