--- a/src/style/DestinationPage.css
+++ b/src/style/DestinationPage.css
@@ -2,6 +2,16 @@ body {
     background-color: #fff5f5;
 }
 
+
+.DescriptionDiv {
+    display:flex;
+    flex-direction: column;
+    margin-left: 50px;
+    margin-right: 50px;
+    
+    
+}
+
 .TitleDiv {
     display: flex;
     position: relative;
