fix: fixed routing - Moved frontpage logic to App.tsx - All styles for frontpage should now be in App.css - Routing moved to index.tsx - update color and design for searchbar

--- a/src/style/searchbar.css
+++ b/src/style/searchbar.css
@@ -1,17 +1,13 @@
-.App {
-    display: flex;
-    justify-content: center;
-  }
-  
-  .searchbar-container {
-    margin-top: 10rem;
-    justify-content: center;
-    width: 50dvh;
-  }
-  
-  .search {
-    /* width: 50dvh; */
-    display: flex;
-    gap: 0.5rem;
-  }
-  
+.searchbar-container {
+  margin-top: 10rem;
+  gap: 0.5rem;
+  text-align: center;
+  width: 50dvh;
+}
+
+.search {
+  /* width: 50dvh; */
+  display: flex;
+  gap: 0.5rem;
+}
+
