--- a/src/style/addDestinationPopUp.css
+++ b/src/style/addDestinationPopUp.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 .modal-popup {
     width: 80%;
 }
 
-
+.createButton {
+    width: 9%;
+    margin: 0 auto;
+    border-radius: 25px !important;
+    font-size: 16px !important;
+    color: black !important;
+    background-color: #C8D8E4 !important;
+    border: 1px solid transparent !important;
+    font-family: 'Poppins' !important;
+    padding: 1px 1px !important;
+}
