--- a/src/style/searchbar.css
+++ b/src/style/searchbar.css
@@ -1,13 +1,41 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
 .searchbar-container {
   margin-top: 10rem;
-  gap: 0.5rem;
-  text-align: center;
+  justify-content: center;
   width: 50dvh;
+  margin: 0 auto;
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
 
 .search {
-  /* width: 50dvh; */
   display: flex;
-  gap: 0.5rem;
+  background-color: #C8D8E4;
+  border-radius: 70px;
+  overflow: hidden; 
 }
 
+.search-bar {
+  flex: 1;
+  border: none;
+  background-color: #C8D8E4; 
+  font-family: 'Poppins' !important;
+}
+
+.search-icon {
+  background-color: #C8D8E4;
+  color: #2B6777;
+  padding: 10px; 
+  cursor: pointer;
+  font-size: 20px;
+  margin-right: 7px;
+}
+
+.search-bar:focus,
+.search-bar:active,
+.search-bar:hover {
+  box-shadow: none !important; 
+  border-color: transparent !important; 
+  background-color: #C8D8E4 
+}
