--- a/src/style/Navbar.css
+++ b/src/style/Navbar.css
@@ -4,21 +4,18 @@
 #topnav {
     background-color:#2B6777;
     overflow: hidden;
-    height: 50px;
+    height: 70px;
     width: 100%;
-    position: sticky; 
-    top: 0; 
-    z-index: 1000;
   }
   
   /* Style the links inside the navigation bar */
-#topnav a {
+#topnav a:nth-child(n+3) {
     color: white;
-    padding: 15px 15px;
+    padding: 20px 30px;
     text-decoration: none;
     font-size: 17px;
     font-family: "Poppins", Calibri, sans-serif;
-    height: 50px; 
+    height: 70px;
   }
 
   #topnav a:not(:first-child) {
@@ -28,25 +25,26 @@
   
   #logo {
     float: left; 
-    display: flex; /* Use flexbox to center the image */
-    align-items: center; /* Center items vertically */
+
   }
 
  #topnav a:nth-child(n+3):hover {
-        background-color: #C8D8E4;
         color: black;
       }
 
 #logo img {
-   height: 35px;
+   height: 45px;
     width: auto; 
-    margin: 0 auto;  
+    margin-left: 5%; 
+    margin: 13px 
 }
 
-#logo {
-  margin-left: 5%;
+#dropdown-menu {
+  color: white;
+  margin: 14px
 }
 
-#dropdown {
-  background-color: #C8D8E4;
+#dropdown-menu:hover {
+  color: #000000;
+  margin: 14px
 }
