--- a/src/style/DestinationPage.css
+++ b/src/style/DestinationPage.css
@@ -1,14 +1,10 @@
-/* body {
-    background-color: #fff5f5;
-}
- */
-
 .AllContentDivs {
     display:flex;
     flex-direction: column;
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 3%;
+    margin-bottom: 6%;
 }
 
 
@@ -18,6 +14,7 @@
     position: relative;
     flex-direction: column;
     text-align: center;
+    margin-top: 3%;
 }
 
 #Rating {
@@ -52,12 +49,13 @@ h2 {
 }
 
 .DescriptionText {
+  margin-top: 1%;
     font-size: 18px;
 }
 
 
 h3 {
-    font-size: 25px;
+    font-size: 32px;
     font-weight: bold;
 }
 
@@ -69,10 +67,12 @@ h4 {
 
 .ActivitiesDiv{
     margin-top: 3%;
+    /* margin-bottom: 5%; */
 }
 
+
 .AllActivities {
-    margin-top: 1%;
+    margin-top: 3%;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -98,6 +98,7 @@ h4 {
 #imgAttraction {
     width: 100%;
     height: 100%;
+    border-radius: 8px;
 }
 
 .StarRating{
@@ -105,13 +106,21 @@ h4 {
     flex-direction: row;
 }
 
+
+.PhotoOfCity {
+  width: 100%;
+  height: 60vh;
+  overflow: hidden;
+  position: relative;
+}
+
 .PhotoOfCity img {
-    display:flex;
-    align-items: center; 
-    justify-items: center; 
     width: 100%;
-    height: 200px;
-    
+    height: auto; /* Adjust to fit the image properly within the container */
+    position: absolute;
+    top: 5%;
+    transform: translateY(-50%); 
+
 }
 
 
