--- a/src/style/DestinationPage.css
+++ b/src/style/DestinationPage.css
@@ -19,12 +19,22 @@
 
 #Rating {
     display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #C8D8E4;
-    width: fit-content;
+    width: 120px;
     border-radius: 20px;
     padding: 5px;
-    margin: 10px;
-    margin-right: 30px;
+    margin: 10px 10px 10px 10px;
+}
+
+#Rating .faDollarSign {
+  margin-right: 2px;
+  font-size: 1.2em;
+}
+
+.TempRating {
+  font-size: 1.2em
 }
 
 
