Annonse og flyttet destinasjoner opp Co-authored-by: Christio02 <Christio02@users.noreply.github.com>

--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,13 @@ body {
   align-items: center;
   gap: 1rem;
 }
+
+.annonse{
+  width: 600px;
+  height: 200px;
+}
+
+.annonse img{
+  width:inherit;
+  height: inherit;
+}
