--- a/src/style/CardContainer.css
+++ b/src/style/CardContainer.css
@@ -2,10 +2,11 @@
 
 .container {
     margin: 0 auto;
-    margin-top: 300px;
+    margin-top: 1rem;
   }
   
   .title {
+    font-size: 24px;
     font-family: 'Poppins';
     margin-left: 7%;
   }
