--- a/src/style/searchbar.css
+++ b/src/style/searchbar.css
@@ -1,11 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 .searchbar-container {
-  margin-top: 10rem;
   justify-content: center;
+  text-align: center;
   width: 50dvh;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 1rem;
   margin-bottom: 20px;
 }
 
