--- a/src/style/addDestinationPopUp.css
+++ b/src/style/addDestinationPopUp.css
@@ -5,13 +5,17 @@
 }
 
 .createButton {
-    width: 9%;
-    margin: 0 auto;
+    color: white !important;
+    background-color: transparent !important;
+    border: none !important;
+    cursor: pointer !important;
     border-radius: 25px !important;
-    font-size: 16px !important;
-    color: black !important;
-    background-color: #C8D8E4 !important;
+    width: auto !important;
+    margin: 0 auto;
     border: 1px solid transparent !important;
-    font-family: 'Poppins' !important;
     padding: 1px 1px !important;
 }
+
+.createButton:hover {
+    color: black !important;
+  }
