--- a/src/style/UserPage.css
+++ b/src/style/UserPage.css
@@ -1,62 +1,67 @@
-.profilepicture img{
-    width: 150px;
-    height: 150px;
-    border-radius: 75px;
-    overflow: hidden;
-    object-fit: cover;
+.profilepicture img {
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+  overflow: hidden;
+  object-fit: cover;
 }
 
-.profilepicture{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 250px;
-    left: 70px;
+.profilepicture {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 250px;
+  left: 70px;
 }
 
-.name{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 340px;
-    left: 230px;
-    font-size: 20px;
+.name {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 340px;
+  left: 230px;
+  font-size: 20px;
 }
 
-.admin{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 362px;
-    left: 250px;
-    font-size: smaller;
+.admin {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 362px;
+  left: 250px;
+  font-size: smaller;
 }
 
-.crown{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: absolute;
-    top: 362px;
-    left: 230px;
-    color: goldenrod;
+.crown {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: absolute;
+  top: 362px;
+  left: 230px;
+  color: goldenrod;
 }
 
-.image-container img{
-    display: flex;
-    width:100%;
-    height: 250px;
-    object-fit: cover;
-
+.image-container img {
+  display: flex;
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
 .user-container {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    gap: 1rem;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
 }
-
+.my-reviews-container {
+}
+.my-reviews-header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
