--- a/src/style/filtercomponent.css
+++ b/src/style/filtercomponent.css
@@ -46,3 +46,28 @@
   h4 {
     color: black !important;
   }
+
+  .button-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+  }
+
+  .button-container button.active {
+    background-color: #9bbdd9 !important; 
+    
+  }
+
+  .sort-arrow {
+  font-size: 0.75em; 
+}
+
+.sorting-button {
+  background-color: #c8d8e4 !important;
+}
+
+.more-options-button {
+  background-color: #c8d8e4 !important;
+}
+
+
