--- a/src/style/DestinationPage.css
+++ b/src/style/DestinationPage.css
@@ -37,14 +37,34 @@
 }
 
 
+
+
+
 .AllRatings{
+    width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     margin-top: 1px;
     margin-bottom: 1px;
 }
 
+.centerContent {
+  display: flex;
+  justify-content: center; /* Center the content */
+  width: 100%;
+  flex-grow: 1; /* Allows the container to grow and take up available space */
+  gap: 10px; /* Optional: Adds space between the centered components */
+}
+
+.deleteButtonContainer {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: auto;
+}
 
 h1 {
     font-weight: bold;
@@ -78,7 +98,6 @@ h4 {
 
 .ActivitiesDiv{
     margin-top: 3%;
-    /* margin-bottom: 5%; */
 }
 
 
@@ -87,8 +106,8 @@ h4 {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    /* margin: 20px; */
 }
+
 .ActivityBox {
     width: 25%;
     height: auto;
@@ -116,8 +135,6 @@ h4 {
 .PhotoOfCity {
   width: 100%;
   height: 50vh;
-  overflow: hidden;
-  position: relative;
   margin-bottom: 2%;
 }
 
@@ -126,7 +143,6 @@ h4 {
     height: 100%;
     object-fit: cover;
     object-position: center;
-    top: 5%;
 }
   
   .review-summary,
