--- a/src/style/addDestinationPopUp.css
+++ b/src/style/addDestinationPopUp.css
@@ -14,6 +14,7 @@
     margin: 0 auto;
     border: 1px solid transparent !important;
     padding: 1px 1px !important;
+    font-family: "Poppins" !important;
 }
 
 .createButton:hover {
