--- a/src/style/UserPage.css
+++ b/src/style/UserPage.css
@@ -1,7 +1,7 @@
 .my-page-link {
   display: flex;
   gap: 2rem;
-  margin-top: 6rem;
+  margin-top: 3rem;
   margin-left: 1rem;
 }
 
@@ -16,49 +16,34 @@
 }
 
 .profilepicture img {
-  width: 150px;
-  height: 150px;
+  width: 100%;
+  height: 100%;
   border-radius: 75px;
   overflow: hidden;
   object-fit: cover;
 }
 
 .profilepicture {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  top: 250px;
-  left: 70px;
+  width: 150px;
+  height: 150px;
+  margin-top: -140px; 
+  z-index: 1;
 }
 
 .name {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  top: 340px;
-  left: 230px;
   font-size: 20px;
+  margin-left: 175px;
+  margin-top: 10px;
+
 }
 
 .admin {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  top: 362px;
-  left: 250px;
+  margin-left: 175px;
+  margin-top: 10px;
   font-size: smaller;
 }
 
 .crown {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  position: absolute;
-  top: 362px;
-  left: 230px;
   color: goldenrod;
 }
 
@@ -69,11 +54,13 @@
   object-fit: cover;
 }
 .user-container {
-  width: 100%;
+  width: 70%;
   display: flex;
   justify-content: center;
+  align-items: flex-start;
   flex-direction: column;
   gap: 1rem;
+  margin: 0 auto;
 }
 
 .my-reviews-container {
@@ -134,4 +121,35 @@
 
 .visited-carousel img {
   object-fit: fill;
+}
+
+#logUtButton {
+  background-color: #2b6777;
+  border: none;
+  padding: 5px 10px 5px 10px;
+  border-radius: 5px; 
+  color: white;
+  float: right;
+  margin-top: 20px;
+
+}
+
+#homeLink {
+  text-decoration: none;
+  color: white;
+}
+
+#homeLink:hover {
+  color: black;
+}
+
+#topContainer {
+  width: 70%;
+  margin: 0 auto;
+  
+  
+}
+
+#nameAndAdmin {
+  display: inline-block;
 }
