--- a/src/style/UserPage.css
+++ b/src/style/UserPage.css
@@ -55,11 +55,6 @@
 }
 .user-container {
   width: 70%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-direction: column;
-  gap: 1rem;
   margin: 0 auto;
 }
 
@@ -79,8 +74,8 @@
 }
 
 .image-carousel {
-  width: 300px; /* Set a fixed width */
-  height: 300px; /* Set a fixed height */
+  width: 300px; 
+  height: 300px; 
   background-color: #f2f2f2;
   border-radius: 5px;
   overflow: hidden;
@@ -152,4 +147,32 @@
 
 #nameAndAdmin {
   display: inline-block;
+}
+
+.your-destinations{
+  display: flex;
+    flex-wrap: wrap;
+    padding-left: 5%;
+    padding-right: 5%;
+    justify-content:flex-start;
+}
+
+#card{
+  width: 22rem;
+  margin:15px;
+  border-radius: 15px; 
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.1); 
+  transition: transform 0.2s; 
+  cursor: pointer;
+}
+
+.card:hover {
+  transform: scale(1.01); /* Scale the card on hover for a subtle effect */
+}
+
+.card-img {
+  height: 200px;
+  object-fit: cover;    
+  border-top-left-radius: 15px; 
+  border-top-right-radius: 15px; 
 }
