--- a/src/style/addDestinationPopUp.css
+++ b/src/style/addDestinationPopUp.css
@@ -5,19 +5,36 @@
 }
 
 .createButton {
+    background-color: rgb(200, 216, 228); 
+    color: #030303; 
+    border: none;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 100px;
+    cursor: pointer;
+    margin-top: 20px;
+    outline: none; 
+    transition: background-color 0.3s ease;
+/*     
     color: white !important;
-    background-color: transparent !important;
+    background-color: blue !important;
     border: none !important;
     cursor: pointer !important;
     margin: 0 auto;
     border: 1px solid transparent !important;
     padding: 1px 1px !important;
-    font-family: "Poppins" !important;
+    font-family: "Poppins" !important; */
 }
 
 .createButton:hover {
     color: black !important;
+    background-color: rgb(180, 196, 208);
   }
+
+.createButton:active {
+    color: black !important;
+    background-color: rgb(180, 196, 208);
+}
 
 #icon {
     margin-left: 5px;
