--- a/src/style/UserPage.css
+++ b/src/style/UserPage.css
@@ -173,6 +173,7 @@
   gap: 2rem;
   margin-top: 3rem;
   margin-left: 1rem;
+  align-items: center;
 }
 
 .link {
@@ -189,4 +190,5 @@
 .active-link {
   font-weight: bold;
   color: #2b6777;
+  font-size: 20px;
 }
